# The_Rust_Lang

./: .gitignore  README.md  READ_ME.md
the_rust_language/: .gitignore  Cargo.toml  reponse.json
the_rust_language/generator/: .gitignore  Cargo.toml
the_rust_language/generator/src/: config.rs  http.rs  io_utils.rs  main.rs  model_extractor.rs
the_rust_language/generator/src/common/: import.rs  mod.rs
the_rust_language/generator/src/endpoints/: common.rs  endpoint_extractor.rs  endpoint_parameter.rs  extract_tags.rs  (+8 more)
the_rust_language/hello/src/: lib.rs  main.rs
the_rust_language/hello_macro/: Cargo.toml
the_rust_language/hello_macro/hello_macro_derive/: Cargo.toml
the_rust_language/hello_macro/src/: lib.rs
the_rust_language/src/: lib.rs  main.rs  styles.scss
the_rust_language/src/rust_by_example/: ch_1.rs  ch_10.rs  ch_11.rs  ch_12.rs  ch_2.rs  ch_3.rs  ch_4.rs  ch_5.rs  ch_6.rs  ch_7.rs  ch_8_1.rs  ch_8_5.rs  ch_8_6.rs  ch_8_7.rs  ch_9.rs  chapter_1.rs  mod.rs
the_rust_language/src/swagger_generator/: enum_generator.rs  gen_settings.toml  generator_printers.rs  generator_utils.rs  mod.rs  model_generator.rs  models_config.toml  swagger_gen.rs
the_rust_language/src/tests/: tests.rs
the_rust_language/src/the_book/: car_insurance.md  chapter_10.rs  chapter_11.rs  chapter_12.rs  chapter_14.rs  chapter_15.rs  chapter_16.rs  chapter_17.rs  chapter_18.rs  chapter_19.rs  chapter_2.rs  chapter_20.rs  chapter_3.rs  chapter_4.rs  chapter_5.rs  chapter_6.rs  chapter_8.rs  chapter_9.rs  mod.rs
the_rust_language/src/tools/: replace_all_config.toml  tools.rs
(+61 files in other folders)
