[package]
name = "gussing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmt = "0.1.0"
inquire = "0.3.0"
list = "0.1.3"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"