[package]
name = "gussing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
fmt = "0.1.0"
inquire = "0.5.2"
list = "0.1.3"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.150"
serde_json = "1.0.68"
toml = "0.5.2"
walkdir = "2"
